<resources>
    <string name="app_name">Sahayak</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create">Create</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login">Login</string>
    <string name="search_employee">Search Employee</string>
    <string name="home">Home</string>
    <string name="name">Name :</string>
    <string name="enter_name">Enter Name</string>
    <string name="locality">Locality :</string>
    <string name="enter_your_locality">Enter Your Locality</string>
    <string name="job_description">Job Description :</string>
    <string name="maid_car_washer">Maid/ Car Washer</string>
    <string name="show_profile">Show Profile</string>
    <string name="enter_your_details">Enter Your Details</string>
    <string name="full_name">Full Name :</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="age">Age :</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender :</string>
    <string name="enter_gender">Enter Gender</string>
    <string name="phone_number">Phone Number :</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="email">Email :</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="address">Address :</string>
    <string name="enter_address">Enter Address</string>
    <string name="job_requirement">Job Requirement :</string>
    <string name="aadhar_number">Aadhar Number :</string>
    <string name="aadhar_nunber">Aadhar Nunber</string>
    <string name="set_password">Set Password :</string>

    <string name="save">Save</string>

</resources>