<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signinowner"
    android:background="@drawable/bgblue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_details"
                android:textAlignment="center"
                android:textColor="#0D4F8B"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_margin="20dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />
            <EditText
                android:id="@+id/nametext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                android:inputType="textPersonName"
                android:background="#E6FFFE"
                android:ems="20"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/agetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/enter_age"
                android:inputType="textPersonName"
                android:background="#E6FFFE"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/gendertext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/enter_gender"
                android:inputType="textPersonName"
                android:background="#E6FFFE"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView80"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/phonetext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6FFFE"
                android:ems="20"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:padding="8dp"
                tools:ignore="TouchTargetSizeCheck"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView81"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/emailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/enter_email_address"
                android:inputType="textEmailAddress"
                android:background="#E6FFFE"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"

                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView82"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/addresstext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/enter_address"
                android:inputType="textPostalAddress"
                android:background="#E6FFFE"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"
                 />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_requirement"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                />

            <EditText
                android:id="@+id/jobreqtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="Maid / Car Washer"
                android:inputType="textPassword"
                android:background="#E6FFFE"
                android:padding="8dp"
                tools:ignore="HardcodedText"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aadhar_number"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"

                />

            <EditText
                android:id="@+id/aadhartext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="20"
                android:hint="@string/aadhar_nunber"
                android:inputType="number"
                android:maxLength="12"
                android:background="#E6FFFE"
                android:padding="8dp"
                android:minHeight="48dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_password"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                 />

            <EditText
                android:id="@+id/passwordtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E6FFFE"
                android:ems="20"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="8dp"
                android:textColorHint="#546E7A"
                android:maxHeight="500dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="#0D4F8B"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="30dp"
                android:textSize="15dp"
                android:padding="10dp"
                />

            <Button
                android:id="@+id/signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SignIn"
                android:backgroundTint="#0D4F8B"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="50dp"
                android:textSize="15dp"
                android:padding="10dp"
                />
        </LinearLayout>




























    </LinearLayout>


</ScrollView>