<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgblue"
    tools:context=".homepage">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="582dp"
        android:text="@string/home"
        android:textAlignment="center"
        android:textColor="#0D4F8B"
        android:textSize="35sp"
        android:textStyle="bold" />

    <LinearLayout

        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-4dp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="432dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
             />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="#E6FFFE"
            android:ems="10"
            android:hint="@string/enter_name"
            android:inputType="textPersonName"
            android:minWidth="500dp"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textColorHint="#546E7A" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-5dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="350dp">


        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:text="@string/locality"
            android:textColor="@color/black"
            android:textSize="20sp"
             />

        <EditText
            android:id="@+id/locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="#E6FFFE"
            android:ems="10"
            android:hint="@string/enter_your_locality"
            android:inputType="textPersonName"
            android:minWidth="500dp"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textColorHint="#546E7A" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginTop="401dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="269dp">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:padding="5dp"
            android:text="@string/job_description"
            android:textColor="@color/black"
            android:textSize="20sp"


            />

        <EditText
            android:id="@+id/jobdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:background="#E6FFFE"
            android:ems="10"
            android:hint="@string/maid_car_washer"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:padding="5dp"
            android:textColorHint="#546E7A" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="555dp"
        android:layout_marginEnd="-2dp"
        android:layout_marginBottom="65dp">

        <Button
            android:id="@+id/showprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="20sp"
            android:backgroundTint="#0D4F8B"
            android:text="@string/show_profile"
            android:textSize="15sp"
            android:padding="12dp"/>

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:backgroundTint="#0D4F8B"
            android:text="@string/search_employee"
            android:textSize="15sp" />


    </LinearLayout>


</RelativeLayout>